nova ai integration

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BASE_URL =https://fixit-backend-server.onrender.com
+BASE_URL=http://fixit-fixitserver-ebifgn-14d745-72-61-105-131.traefik.me/api/v1
 EXPO_PUBLIC_IOS_CLIENT_ID=271975408269-j3brq3a0tjp6jluhmo55otjh6n0jvmvp.apps.googleusercontent.com
 EXPO_PUBLIC_WEB_CLIENT_ID=271975408269-a82s59v5sjhrsfuot4odi9ag876msmh0.apps.googleusercontent.com
