--- a/package.json
+++ b/package.json
@@ -22,27 +22,29 @@
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.9.0",
     "dotenv": "^17.2.3",
-    "expo": "54.0.20",
+    "expo": "~54.0.24",
     "expo-constants": "^18.0.9",
-    "expo-dev-client": "~6.0.16",
+    "expo-dev-client": "~6.0.18",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.13",
-    "expo-splash-screen": "~31.0.10",
+    "expo-linking": "~8.0.9",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-updates": "~29.0.12",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "~15.0.9",
+    "i18next": "^25.6.2",
     "nativewind": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^16.3.3",
     "react-native": "0.81.5",
     "react-native-bluetooth-classic": "^1.73.0-rc.15",
     "react-native-element-dropdown": "^2.12.4",
