--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.9.0",
     "dotenv": "^17.2.3",
-    "expo": "~54.0.24",
+    "expo": "~54.0.25",
+    "expo-av": "~16.0.7",
     "expo-constants": "^18.0.9",
     "expo-dev-client": "~6.0.18",
     "expo-font": "~14.0.8",
